language/move-lang/tests/move_check/naming/unbound_struct_in_current.exp
error: 

   ┌── tests/move_check/naming/unbound_struct_in_current.move:2:12 ───
   │
 2 │     foo(s: Self.S): Self.S {
   │            ^^^^^^ Unbound struct or resource 'S' in module '0000000000000000000000000000000000000000000000000000000008675309.M'
   │

error: 

   ┌── tests/move_check/naming/unbound_struct_in_current.move:2:21 ───
   │
 2 │     foo(s: Self.S): Self.S {
   │                     ^^^^^^ Unbound struct or resource 'S' in module '0000000000000000000000000000000000000000000000000000000008675309.M'
   │

error: 

   ┌── tests/move_check/naming/unbound_struct_in_current.move:7:12 ───
   │
 7 │     bar(): Self.S {
   │            ^^^^^^ Unbound struct or resource 'S' in module '0000000000000000000000000000000000000000000000000000000008675309.M'
   │

error: 

   ┌── tests/move_check/naming/unbound_struct_in_current.move:8:9 ───
   │
 8 │         S {}
   │         ^ Unbound struct or resource 'S' in module '0000000000000000000000000000000000000000000000000000000008675309.M'
   │

error: 

    ┌── tests/move_check/naming/unbound_struct_in_current.move:12:9 ───
    │
 12 │         S {} = bar();
    │         ^ Unbound struct or resource 'S' in module '0000000000000000000000000000000000000000000000000000000008675309.M'
    │

error: 

    ┌── tests/move_check/naming/unbound_struct_in_current.move:13:9 ───
    │
 13 │         Self.S {} = bar();
    │         ^^^^^^ Unbound struct or resource 'S' in module '0000000000000000000000000000000000000000000000000000000008675309.M'
    │

error: 

    ┌── tests/move_check/naming/unbound_struct_in_current.move:17:13 ───
    │
 17 │         let S {} = bar();
    │             ^ Unbound struct or resource 'S' in module '0000000000000000000000000000000000000000000000000000000008675309.M'
    │

error: 

    ┌── tests/move_check/naming/unbound_struct_in_current.move:18:13 ───
    │
 18 │         let Self.S {} = bar();
    │             ^^^^^^ Unbound struct or resource 'S' in module '0000000000000000000000000000000000000000000000000000000008675309.M'
    │

